--- a/index.html
+++ b/index.html
@@ -4,11 +4,67 @@
         <title>Supernova</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link href="css/style.css" rel="stylesheet"> -->
+        <link href="stylesheets/main.css" rel="stylesheet">
         <script src="./dist/bundle.js"></script>
     </head>
     <body>
-        <!-- <script src="js/three.js"></script> -->
-        <div id="root">You're in index.html</div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+         <!-- animate 3D objects easily -->
+        <div id="root"></div>
+
+        <script>
+            // every threejs proj has scene, camera, renderer (WebGL most flexibility)
+            let scene = new THREE.Scene
+
+            let camera = new THREE.PerspectiveCamera(
+                75, 
+                window.innerWidth/window.innerHeight, 
+                0.1, 
+                1000
+            );
+            camera.position.z = 4;
+
+            let renderer = new THREE.WebGLRenderer({antialias: true});
+            renderer.setClearColor("#e5e5e5");
+            renderer.setSize(window.innerWidth, window.innerHeight);
+
+            document.body.appendChild(renderer.domElement);
+
+            window.addEventListener('resize', () => {
+                renderer.setSize(window.innerWidth, window.innerHeight);
+                camera.aspect = window.innerWidth / window.innerHeight;
+                camera.updateProjectionMatrix();
+            })
+
+           
+
+            let geometry = new THREE.SphereGeometry(1, 4, 4);
+            let material = new THREE.MeshLambertMaterial({ color: 0xFFCC00 });
+            let mesh = new THREE.Mesh(geometry, material);
+
+            // mesh.position.x = -2;
+            // mesh.position.set(2, 2, -2) // (x, y, z)
+            // mesh.rotation.set(45, 0, 0) // static rotation
+            // mesh.scale.set(1, 2, 1)
+
+            scene.add(mesh);
+
+            const light = new THREE.PointLight(0xFFFFFF, 1, 500);
+            light.position.set(10,0, 25);
+            scene.add(light);
+
+            function animate() {
+                requestAnimationFrame(animate);
+                // creates a loop that will cause renderer to draw scene everytime it's refreshed (standard ~60fps)
+                
+                mesh.rotation.y += 0.02;
+                renderer.render(scene, camera);
+            }
+
+            animate();
+
+        </script>
+
     </body>
 </html>
