Add orbit controls and zoom in, out for scene

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
         <div id="root"></div>
-
+        <h1>Simulation of star using physical principality</h1>
         <script>
             // // every threejs proj has scene, camera, renderer (WebGL most flexibility)
             // let scene = new THREE.Scene
