Add dist folder

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="stylesheets/main.css" rel="stylesheet">
+        <script src="dist/bundle.js" type="application/javascript"></script>
     </head>
     <body>
-        <script src="./dist/bundle.js" type="application/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
         <div id="root"></div>
         <h1>Simulation of star using physical principality</h1>
