--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
         <div id="root"></div>
         <h1>Simulation of star using physical principality</h1>
+
+        <div className="slider-footer">
+            HERE IS TEXT
+            <input id="timelapse-slider" type="range" value="0" max="1" step="0.1">
+        </div>
+        <div id="heatmap-bar" title="Change units to “K”" class="pq">
+            <span class="temp-units" style="">MeV</span>
+            <span class="heatmap" style="background: red; color:white;">90</span>
+            <span class="heatmap" style="background: orange; color: rgb(0, 0, 0);">70</span>
+            <span class="heatmap" style="background: rgba(235, 211, 53, 0.92); color: rgb(0, 0, 0);">60</span>
+            <span class="heatmap" style="background: green; color: white;">30</span>
+            <span class="heatmap" style="background: blue; color: white;">20</span>
+            
+        </div>
         <script>
             // // every threejs proj has scene, camera, renderer (WebGL most flexibility)
             // let scene = new THREE.Scene
