--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         <h1>Simulation of star using physical principality</h1>
 
         <div className="slider-footer">
-            HERE IS TEXT
-            <input id="timelapse-slider" type="range" value="0" max="1" step="0.1">
+            <input 
+                id="timelapse-slider" 
+                type="range" 
+                value="0" 
+                max="4.354" 
+                step="1"
+            >
         </div>
         <div id="heatmap-bar" title="Change units to “K”" class="pq">
             <span class="temp-units" style="">MeV</span>
