Style footer buttons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <div class="footer">
             <div class="play-button-wrapper">
                 <a class="play-button">
-                    <!-- <img src="https://img.icons8.com/fluent-systems-regular/96/000000/play.png" /> -->
-                    <img src="https://img.icons8.com/color/48/000000/play-button-circled.png" />
-                    <!-- <img src="https://img.icons8.com/ios-filled/50/000000/play-button-circled.png" /> -->    
+                    <img src="https://img.icons8.com/nolan/64/play-button-circled.png" />
                 </a>
             </div>
             <div class="slider-wrapper">
@@ -29,6 +27,49 @@
                         step="1"
                     >
                 </div>
+            </div>
+            <div class="reset-btn-wrapper">
+                <svg class="reset-btn" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="35" height="35" viewBox="0 0 172 172"
+                    style=" fill:#000000;">
+                    <defs>
+                        <radialGradient cx="101.34742" cy="90.02767" r="78.05933" gradientUnits="userSpaceOnUse"
+                            id="color-1_K2njhUKeLfle_gr1">
+                            <stop offset="0.266" stop-color="#2200d4"></stop>
+                            <stop offset="0.535" stop-color="#006fd2"></stop>
+                            <stop offset="0.673" stop-color="#0068ca"></stop>
+                            <stop offset="0.782" stop-color="#005dbd"></stop>
+                            <stop offset="0.876" stop-color="#004daa"></stop>
+                            <stop offset="0.959" stop-color="#003891"></stop>
+                            <stop offset="1" stop-color="#002b82"></stop>
+                        </radialGradient>
+                        <linearGradient x1="98.72442" y1="2.02458" x2="172.46942" y2="140.66733" gradientUnits="userSpaceOnUse"
+                            id="color-2_K2njhUKeLfle_gr2">
+                            <stop offset="0" stop-color="#8032ef"></stop>
+                            <stop offset="1" stop-color="#1ea2e4"></stop>
+                        </linearGradient>
+                        <linearGradient x1="47.93783" y1="28.638" x2="117.43658" y2="159.2935" gradientUnits="userSpaceOnUse"
+                            id="color-3_K2njhUKeLfle_gr3">
+                            <stop offset="0" stop-color="#8032ef"></stop>
+                            <stop offset="1" stop-color="#1ea2e4"></stop>
+                        </linearGradient>
+                    </defs>
+                    <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter"
+                        stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
+                        font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                        <path d="M0,172v-172h172v172z" fill="none"></path>
+                        <g>
+                            <path
+                                d="M154.08333,82.41667c-1.978,0 -12.35533,0 -14.33333,0c-1.978,0 -3.58333,1.60533 -3.58333,3.58333c0,27.70633 -22.46033,50.16667 -50.16667,50.16667c-27.70633,0 -50.16667,-22.46033 -50.16667,-50.16667h-21.5c0,39.5815 32.08517,71.66667 71.66667,71.66667c39.5815,0 71.66667,-32.08517 71.66667,-71.66667c0,-1.978 -1.60533,-3.58333 -3.58333,-3.58333z"
+                                fill="url(#color-1_K2njhUKeLfle_gr1)"></path>
+                            <path
+                                d="M121.40333,12.126l-18.92,37.22008c-1.27208,2.50475 1.118,5.29617 3.78758,4.42542l26.8105,-8.73975c2.35067,-0.76683 3.6335,-3.29308 2.86667,-5.64375l-8.73617,-26.8105c-0.87075,-2.66958 -4.5365,-2.95625 -5.80858,-0.4515z"
+                                fill="url(#color-2_K2njhUKeLfle_gr2)"></path>
+                            <path
+                                d="M35.83333,86c0,-27.70633 22.46033,-50.16667 50.16667,-50.16667c8.06608,0 15.66275,1.94933 22.41733,5.33558l9.60692,-19.21383c-9.64633,-4.83392 -20.50025,-7.62175 -32.02425,-7.62175c-39.5815,0 -71.66667,32.08517 -71.66667,71.66667c0,39.5815 32.08517,71.66667 71.66667,71.66667c-17.27525,-2.68033 -50.16667,-18.31083 -50.16667,-71.66667z"
+                                fill="url(#color-3_K2njhUKeLfle_gr3)"></path>
+                        </g>
+                    </g>
+                </svg>
             </div>
         </div>
         <div id="heatmap-bar" title="Change units to “K”" class="pq">
