Add timelapse functionality on play button click

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="footer">
             <div class="play-button-wrapper">
                 <a id="play-button">
-                    <img src="https://img.icons8.com/nolan/64/play-button-circled.png" />
+                    <img id="play-click" src="https://img.icons8.com/nolan/64/play-button-circled.png" />
                 </a>
             </div>
             <div class="slider-wrapper">
