Clean up CSS and extract more timepoints from hdf5

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Supernova</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="stylesheets/reset.css" rel="stylesheet">
         <link href="stylesheets/main.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="dist/bundle.js" type="application/javascript"></script>
