Add 4s timepoint, CSS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
         <div id="root"></div>
-        <h1>Simulation of star using physical principality</h1>
+        <h1>Simulation of 21 M ☉ Star Using Physical Principality</h1>
+        <!-- <h1>SIMULATION OF 21 M ☉ STAR USING PHYSICAL PRINCIPALITY</h1> -->
         <div class="footer">
             <div class="play-button-wrapper">
                 <a id="play-button">
