Add favicon and adjust particle size

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Supernova</title>
         <meta charset="UTF-8">
+        <link rel="icon" href="images/favicon.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="stylesheets/reset.css" rel="stylesheet">
         <link href="stylesheets/main.css" rel="stylesheet">
@@ -12,8 +13,10 @@
     <body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
         <div id="root"></div>
-        <h1>Simulation of 21 M ☉ Star Using Physical Principality</h1>
-        <!-- <h1>SIMULATION OF 21 M ☉ STAR USING PHYSICAL PRINCIPALITY</h1> -->
+        <div class="header-wrapper">
+            <h1>Simulation of 21 M ☉ Star Using Physical Principality</h1>
+            <!-- <h1>SIMULATION OF 21 M ☉ STAR USING PHYSICAL PRINCIPALITY</h1> -->
+        </div>
         <div class="footer">
             <div class="play-button-wrapper">
                 <a id="play-button">
