Fix slider values to update on play button click

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
         <div id="root"></div>
         <div class="header-wrapper">
-            <h1>Simulation of 21 M ☉ Star Using Physical Principality</h1>
+            <h1>Simulation of 21 M<sub>☉</sub> Star Using Physical Principality</h1>
             <!-- <h1>SIMULATION OF 21 M ☉ STAR USING PHYSICAL PRINCIPALITY</h1> -->
         </div>
         <div class="footer">
