--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
             </div>
         </div>
         <div id="heatmap-bar" title="Change units to “K”" class="pq">
-            <span class="temp-units" style="">T(MeV)</span>
+            <span class="units-header" style="">T
+                (MeV)</span>
             <!-- Entropy (K_B/baryon) -->
             <span class="heatmap" style="background: red; color:white; padding-left: 6px">30+</span>
             <span class="heatmap" style="background: orange; color: rgb(0, 0, 0);">24</span>
