Add contact icons, styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
         <div class="header-wrapper">
             <h1>Simulation of 21 M<sub>☉</sub> Star Using Physical Principality</h1>
             <!-- <h1>SIMULATION OF 21 M ☉ STAR USING PHYSICAL PRINCIPALITY</h1> -->
+            <div id="header-right">
+                 <div id="about-wrapper">
+                     <button id="about-btn">
+                        About
+                     </button>
+                 </div>
+                 <div class="contact-icons">
+                     <a href="https://github.com/gevorkia" > 
+                        <div class="github"></div>
+                    </a>
+                     <a href="https://www.linkedin.com/in/liligevorkian/"> 
+                        <div class="linkedin"></div>
+                     </a>
+                 </div>
+            </div>
         </div>
+
         <div class="footer">
             <div class="play-button-wrapper">
                 <a id="play-button">
