Add modal functionality

--- a/index.html
+++ b/index.html
@@ -14,19 +14,25 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
         <div id="root"></div>
         <div class="header-wrapper">
-            <h1>Simulation of 21 M<sub>☉</sub> Star Using Physical Principality</h1>
-            <!-- <h1>SIMULATION OF 21 M ☉ STAR USING PHYSICAL PRINCIPALITY</h1> -->
+            <h1>Simulation of 21 M <sub>☉</sub> &nbsp;Star Using Physical Principality</h1>
             <div id="header-right">
                  <div id="about-wrapper">
-                     <button id="about-btn">
-                        About
-                     </button>
+                     <button id="about-btn">About</button>
+                    <div id="myModal" class="modal">
+                    
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                            <span class="close">&times;</span>
+                            <p>Some text in the Modal..</p>
+                        </div>
+                    
+                    </div>
                  </div>
                  <div class="contact-icons">
-                     <a href="https://github.com/gevorkia" > 
+                     <a href="https://github.com/gevorkia" target="_blank"> 
                         <div class="github"></div>
                     </a>
-                     <a href="https://www.linkedin.com/in/liligevorkian/"> 
+                     <a href="https://www.linkedin.com/in/liligevorkian/" target="_blank"> 
                         <div class="linkedin"></div>
                      </a>
                  </div>
