Revise modal text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <div class="about-mid">
                                 <p class="modal-header">Future Features</p>
                                 <br>
-                                Dynamic temperature and entropy rendering via heatmap coloration.
+                                Dynamic temperature and entropy rendering via heatmap.
                                 <br><br>
                                 3D modeling (z-axis) of current 2D star planes. Timepoints may be scaled down to account for increase in data.
                                 <br><br>
@@ -59,7 +59,7 @@
                             <div class="about-us">
                                 <p class="modal-header">About Us</p>
                                 <br><br>
-                                Lili is a scientist turned software engineer who finds joy in multi-disciplinary work and creative collaboration. She is
+                                Lili finds joy in multi-disciplinary work and creative collaboration. She is
                                 open to new opportunities and would love to illustrate your data. Connect with her on 
                                 <a class="modal-links" href="https://www.linkedin.com/in/liligevorkian/" target="_blank">
                                 LinkedIn</a>, and visit her website (coming soon!).
@@ -68,7 +68,7 @@
                                 successful, at the junctions of current nuclear experiments, and future observational efforts to understand their role
                                 in the dynamics and composition of the universe.
                                 <br><br>
-                                You can view his dissertation as presented with dance choreography 
+                                You can view his dissertation, presented with dance choreography, 
                                 <a class="modal-links" href="https://www.youtube.com/watch?v=g_4t9C8fBbk" target="_blank">here</a> 
                                 and visit his 
                                 <a class="modal-links" href="https://vartanyandavid7.wixsite.com/dvyan" target="_blank">website</a>.
