Add and style pictures

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                             
                             <div class="about-us">
                                 <p class="modal-header">About Us</p>
+                                <div class="about-img-wrapper">
+                                    <img class="about-img" src="./images/lili.jpg" alt="">
+                                    <img class="about-img" src="./images/david.png" alt="">
+                                </div>
                                 <br><br>
                                 Lili finds joy in multi-disciplinary work and creative collaboration. She is
                                 open to new opportunities and would love to illustrate your data. Connect with her on 
