Revise modal text, links

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                                 <br><br>
                                 3D modeling (z-axis) of current 2D star planes. Timepoints may be scaled down to account for increase in data.
                                 <br><br>
+                                Timepoint scale for slider.
+                                <br><br>
                             </div>
                             <!-- <div class="about-mid-thanks">
                                 Thank you to App Academy for entertaining my musings and giving me a playground to grow in.
