Add user interaction info, update modal

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
                                 ~25,000 datapoints. The simulation presented lasts 4,354 ms or ~4.4 seconds, culminating in an explosion that can
                                 outshine entire galaxies and radiate more energy than our sun will in its entire lifetime.
                                 <br><br>
-                                This project was created purely using JS, Three.js, HTML, & CSS. The sheer volume of data (total ~100 million POJOs and
+                                Supernova was created purely using JS, Three.js, HTML, & CSS. The sheer volume of data (total ~100 million POJOs and
                                 12 GBs) and rendering speed of Three.js created limitations. Space and time complexity were assessed and optimized.
                                 <br><br>
-                                Note: Current particle coloring does not reflect accurate temperatures. The browser could not keep up with the power required
+                                Use your mouse to rotate around and zoom in + out of the scene.
+                                <br><br>
+                                <a>Note: Current particle coloring does not reflect accurate temperatures. The browser could not keep up with the power required
                                 for dynamic heatmap coloration based on the current algorithms.
+                                </a>
                                 <br><br>
                             </div>
                             <div class="about-mid">
@@ -64,20 +67,22 @@
                                     <img class="about-img" src="./images/lili.jpg" alt="">
                                     <img class="about-img" src="./images/david.png" alt="">
                                 </div>
-                                <br><br>
-                                Lili finds joy in multi-disciplinary work and creative collaboration. She is
-                                open to new opportunities and would love to illustrate your data. Connect with her on 
-                                <a class="modal-links" href="https://www.linkedin.com/in/liligevorkian/" target="_blank">
-                                LinkedIn</a>, and visit her website (coming soon!).
-                                <br><br>
-                                David studies the theory of core collapse supernova from the end stages of a star's life to its explosion, failed or
-                                successful, at the junctions of current nuclear experiments, and future observational efforts to understand their role
-                                in the dynamics and composition of the universe.
-                                <br><br>
-                                You can view his dissertation, presented with dance choreography, 
-                                <a class="modal-links" href="https://www.youtube.com/watch?v=g_4t9C8fBbk" target="_blank">here</a> 
-                                and visit his 
-                                <a class="modal-links" href="https://vartanyandavid7.wixsite.com/dvyan" target="_blank">website</a>.
+                                <div class="about-us-body">
+                                    <br><br>
+                                    Lili finds joy in multi-disciplinary work and creative collaboration. She is
+                                    open to new opportunities and would love to illustrate your data. Connect with her on 
+                                    <a class="modal-links" href="https://www.linkedin.com/in/liligevorkian/" target="_blank">
+                                    LinkedIn</a>, and visit her website (coming soon!).
+                                    <br><br>
+                                    David studies the theory of core collapse supernova from the end stages of a star's life to its explosion, failed or
+                                    successful, at the junctions of current nuclear experiments, and future observational efforts to understand their role
+                                    in the dynamics and composition of the universe.
+                                    <br><br>
+                                    You can view his dissertation, presented with dance choreography, 
+                                    <a class="modal-links" href="https://www.youtube.com/watch?v=g_4t9C8fBbk" target="_blank">here</a> 
+                                    and visit his 
+                                    <a class="modal-links" href="https://vartanyandavid7.wixsite.com/dvyan" target="_blank">website</a>
+                                </div>
                             </div>
                         </p>
                         </div>
