--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     You can view his dissertation, presented with dance choreography, 
                                     <a class="modal-links" href="https://www.youtube.com/watch?v=g_4t9C8fBbk" target="_blank">here</a> 
                                     and visit his 
-                                    <a class="modal-links" href="https://vartanyandavid7.wixsite.com/dvyan" target="_blank">website</a>
+                                    <a class="modal-links" href="https://vartanyandavid7.wixsite.com/dvyan" target="_blank">website</a>.
                                 </div>
                             </div>
                         </p>
