--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
         <meta charset="UTF-8">
         <link rel="icon" href="images/favicon.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link href="stylesheets/reset.css" rel="stylesheet">
         <link href="stylesheets/main.css" rel="stylesheet">
         <link href="stylesheets/modal.css" rel="stylesheet">
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="dist/bundle.js" type="application/javascript"></script>
+
+        <meta name="title" property="og:title" content="Supernova" />
+        <meta property="og:type" content="Website" />
+        <meta name="image" property="og:image" content="meta-image.png" />
+        <meta name="description" property="og:description"
+            content="A timelapse illustrating a supernova, the explosion of a star, created using Three.js. Each rendering is a millisecond snapshot containing ~25,000 datapoints. The simulation presented lasts 4,354 ms or ~4.4 seconds, culminating in an explosion that can outshine entire galaxies and radiate more energy than our sun will in its entire lifetime." />
+        <meta name="author" content="Lili Gevorkian" />
+        <meta name="keywords" content="supernova, astrophysics, core collapse, stars, star simulation, Three.js">
+
     </head>
     <body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
