--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta name="description" content="Supernova" />
         <meta name="title" property="og:title" content="Supernova" />
         <meta property="og:type" content="Website" />
-        <meta name="image" property="og:image" content="images/meta-image.png" />
+        <meta name="image" property="og:image" content="./images/meta-image.png" />
         <meta name="description" property="og:description"
             content="A timelapse illustrating a supernova, the explosion of a star, created using Three.js. Each rendering is a millisecond snapshot containing ~25,000 datapoints. The simulation presented lasts 4,354 ms or ~4.4 seconds, culminating in an explosion that can outshine entire galaxies and radiate more energy than our sun will in its entire lifetime." />
         <meta name="author" content="Lili Gevorkian" />
