Update meta title

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="dist/bundle.js" type="application/javascript"></script>
 
-        <meta name="description" content="Supernova" />
-        <meta name="title" property="og:title" content="Supernova" />
+        <meta name="title" property="og:title" content="Simulation of 21 M☉ Star Using Physical Principality" />
         <meta property="og:type" content="Website" />
         <meta name="image" property="og:image" content="./images/meta-image.png" />
         <meta name="description" property="og:description"
