--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
                                 </div>
                                 <div class="about-us-body">
                                     <br><br>
-                                    Lili finds joy in multi-disciplinary work and creative collaboration. She is
-                                    open to new opportunities and would love to illustrate your data. Connect with her on 
+                                    Lili finds joy in multi-disciplinary work and creative collaboration - she'd love to illustrate your data!
+                                    She has strong interests in ethical tech and building tools that improve accessibility, independence, and personal
+                                    expression. Connect with her on
                                     <a class="modal-links" href="https://www.linkedin.com/in/liligevorkian/" target="_blank">
                                     LinkedIn</a>, and visit her website (coming soon!).
                                     <br><br>
