Update about me

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="about-us-body">
                                     <br><br>
-                                    Lili finds joy in multi-disciplinary work and creative collaboration - she'd love to illustrate your data!
+                                    Lili finds joy in multi-disciplinary work and creative collaboration.
                                     She has strong interests in ethical tech and building tools that improve accessibility, independence, and personal
                                     expression. Connect with her on
                                     <a class="modal-links" href="https://www.linkedin.com/in/liligevorkian/" target="_blank">
