--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </svg>
             </div>
         </div>
-        <div id="heatmap-bar" title="Change units to “K”" class="pq">
+        <!-- <div id="heatmap-bar" title="Change units to “K”" class="pq">
             <span class="units-header" style="">T
                 (MeV)</span>
             <!-- Entropy (K_B/baryon) -->
@@ -232,7 +232,7 @@
             <span class="heatmap" style="background: green; color: white;">12</span>
             <span class="heatmap" style="background: blue; color: white;">6</span>
             
-        </div>
+        </div> -->
         <script>
             // // every threejs proj has scene, camera, renderer (WebGL most flexibility)
             // let scene = new THREE.Scene
