--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
             <span class="units-header" style="">T
                 (MeV)</span>
             <!-- Entropy (K_B/baryon) -->
-            <span class="heatmap" style="background: red; color:white; padding-left: 6px">30+</span>
+            <!-- <span class="heatmap" style="background: red; color:white; padding-left: 6px">30+</span>
             <span class="heatmap" style="background: orange; color: rgb(0, 0, 0);">24</span>
             <span class="heatmap" style="background: rgba(235, 211, 53, 0.92); color: rgb(0, 0, 0);">18</span>
             <span class="heatmap" style="background: green; color: white;">12</span>
             <span class="heatmap" style="background: blue; color: white;">6</span>
             
-        </div> -->
+        </div> --> 
         <script>
             // // every threejs proj has scene, camera, renderer (WebGL most flexibility)
             // let scene = new THREE.Scene
