Change GH link and addd gif

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                  </div>
                  <div class="contact-icons">
-                     <a href="https://github.com/gevorkia" target="_blank"> 
+                     <a href="https://github.com/gevorkia/supernova" target="_blank"> 
                         <div class="github"></div>
                     </a>
                      <a href="https://www.linkedin.com/in/liligevorkian/" target="_blank"> 
