Add live link to ReadMe

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="dist/bundle.js" type="application/javascript"></script>
 
-        <meta name="description" content="A timelapse illustrating a supernova, the explosion of a star, created using Three.js. Each rendering is a millisecond snapshot containing ~25,000 datapoints. The simulation presented lasts 4,354 ms or ~4.4 seconds, culminating in an explosion that can outshine entire galaxies and radiate more energy than our sun will in its entire lifetime."/>
+        <meta name="description" content="A timelapse illustrating a core-collapse supernova, the explosion of a star, created using Three.js. Each rendering is a millisecond snapshot containing 25,000 datapoints. The simulation presented lasts 4,354 ms or ~4.4 seconds, culminating in an explosion that can outshine entire galaxies and radiate more energy than our sun will in its entire lifetime."/>
         <meta name="title" property="og:title" content="Simulation of 21 M☉ Star Using Physical Principality" />
         <meta property="og:type" content="Website" />
         <meta name="image" property="og:image" content="./images/meta-image.png" />
         <meta name="description" property="og:description"
-            content="A timelapse illustrating a supernova, the explosion of a star, created using Three.js. Each rendering is a millisecond snapshot containing ~25,000 datapoints. The simulation presented lasts 4,354 ms or ~4.4 seconds, culminating in an explosion that can outshine entire galaxies and radiate more energy than our sun will in its entire lifetime." />
+            content="A timelapse illustrating a core-collapse supernova, the explosion of a star, created using Three.js. Each rendering is a millisecond snapshot containing 25,000 datapoints. The simulation presented lasts 4,354 ms or ~4.4 seconds, culminating in an explosion that can outshine entire galaxies and radiate more energy than our sun will in its entire lifetime." />
         <meta name="author" content="Lili Gevorkian" />
         <meta name="keywords" content="supernova, astrophysics, core collapse, stars, star simulation, Three.js">
 
